Fix word wrapping with custom help name on global nav
fixes: CNVS-33035, CNVS-33020

Test Plan:

- Enter a long multi word custom name for the help link menu
  (up to 30 characters)

- The words should wrap onto a new line, and should not
  overflow out of the global nav

- Additionally, the words should not break as can be seen
  here http://www.screencast.com/t/eFfaifau

- If you change the languages as outlined in the jira for
  33020 all global nav text should behave as outlined above

Reviewed-on: https://gerrit.instructure.com/94131
Tested-by: Jenkins
QA-Review: Dan Sasaki
Product-Review: Kyle Follett <kfollett@instructure.com>

--- a/app/stylesheets/base/_ic_app_header.scss
+++ b/app/stylesheets/base/_ic_app_header.scss
@@ -375,7 +375,7 @@ body.primary-nav-expanded {
     background: transparent;
     color: $ic-brand-global-nav-menu-item__text-color;
     white-space: normal;
-    word-break: break-all;
+    word-wrap: break-word;
     padding-left: 0.25rem;
     padding-right: 0.25rem;
 
